test/pass/49-algebraic_dependencies.perk
import "stdio.h"

type Example =
	| Something ((char*)?)

fun main(): void {
	return
}