test/fail/35-type_member_extensions_undefined_function.perk
import "stdio.h"

type List = Nil | Cons(int, List)

fun main() : void {
    List.smth()
}